Adopter exceptionMapping fra k9