@@ -1,13 +1,14 @@
 package no.nav.foreldrepenger.abonnent.web.app.konfig;
 
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.ws.rs.ApplicationPath;
-import javax.ws.rs.core.Application;
+
+import org.glassfish.jersey.server.ResourceConfig;
+import org.glassfish.jersey.server.ServerProperties;
 
 import io.swagger.v3.jaxrs2.integration.JaxrsOpenApiContextBuilder;
 import io.swagger.v3.jaxrs2.integration.resources.OpenApiResource;
@@ -16,14 +17,13 @@ import io.swagger.v3.oas.integration.SwaggerConfiguration;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.servers.Server;
-import no.nav.foreldrepenger.abonnent.web.app.exceptions.ConstraintViolationMapper;
-import no.nav.foreldrepenger.abonnent.web.app.exceptions.JsonMappingExceptionMapper;
-import no.nav.foreldrepenger.abonnent.web.app.exceptions.JsonParseExceptionMapper;
+import no.nav.foreldrepenger.abonnent.web.app.exceptions.KnownExceptionMappers;
+import no.nav.foreldrepenger.abonnent.web.app.jackson.JacksonJsonConfig;
 import no.nav.vedtak.felles.integrasjon.rest.jersey.TimingFilter;
 import no.nav.vedtak.felles.prosesstask.rest.ProsessTaskRestTjeneste;
 
 @ApplicationPath(ApplicationConfig.API_URI)
-public class ApplicationConfig extends Application {
+public class ApplicationConfig extends ResourceConfig {
 
     public static final String API_URI = "/api";
 
@@ -52,19 +52,16 @@ public class ApplicationConfig extends Application {
         } catch (OpenApiConfigurationException e) {
             throw new RuntimeException(e.getMessage(), e);
         }
-    }
 
-    @Override
-    public Set<Class<?>> getClasses() {
-        Set<Class<?>> classes = new HashSet<>();
-        classes.add(TimingFilter.class);
-        classes.add(ProsessTaskRestTjeneste.class);
-        classes.add(OpenApiResource.class);
-        classes.add(ConstraintViolationMapper.class);
-        classes.add(JsonMappingExceptionMapper.class);
-        classes.add(JsonParseExceptionMapper.class);
-        classes.addAll(FellesKlasserForRest.getClasses());
+        property(ServerProperties.BV_SEND_ERROR_IN_RESPONSE, true);
+        register(OpenApiResource.class);
+        register(JacksonJsonConfig.class);
+        register(TimingFilter.class);
 
-        return Collections.unmodifiableSet(classes);
+        registerClasses(Set.of(ProsessTaskRestTjeneste.class));
+
+        registerInstances(new LinkedHashSet<>(new KnownExceptionMappers().getExceptionMappers()));
+
+        property(ServerProperties.PROCESSING_RESPONSE_ERRORS_ENABLED, true);
     }
 }
